// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EnhancedServerCard > renders correctly and matches snapshot 1`] = `
<div>
  <div
    data-testid="enhanced-server-card"
  >
    <h3>
      Test Server
    </h3>
    <div>
      Status: 
      healthy
    </div>
    <div>
      CPU: 
      45
      %
    </div>
    <div>
      Memory: 
      60
      %
    </div>
    <div>
      Disk: 
      30
      %
    </div>
    <button>
      Restart
    </button>
  </div>
</div>
`;

exports[`EnhancedServerCard v5.0 > 스냅샷 테스트 > compact 변형의 스냅샷이 일치한다 1`] = `
<div
  class="
        relative p-4 min-h-[200px] rounded-2xl cursor-pointer
        bg-gradient-to-br from-emerald-50/80 via-green-50/60 to-teal-50/40
        border-2 border-emerald-200/60 hover:border-emerald-300/80
        shadow-lg shadow-emerald-100/50 hover:shadow-2xl
        transition-all duration-300 ease-out
        backdrop-blur-lg
        group overflow-hidden
      "
  data-testid="motion-div"
>
  <div
    class="absolute inset-0 bg-gradient-to-br from-white/10 via-transparent to-black/5 pointer-events-none"
  />
  <div
    class="absolute top-4 right-4 flex items-center gap-2 z-10"
  >
    <div
      class="w-2.5 h-2.5 bg-emerald-400 rounded-full shadow-lg"
      data-testid="motion-div"
    />
    <div
      class="flex items-center gap-1 bg-white/80 backdrop-blur-sm rounded-full px-2 py-1 shadow-sm"
      data-testid="motion-div"
    >
      <div
        data-testid="minus-icon"
      >
        Minus
      </div>
      <div
        data-testid="wifi-icon"
      >
        Wifi
      </div>
    </div>
  </div>
  <div
    class="flex items-start justify-between mb-5"
  >
    <div
      class="flex items-center gap-4 flex-1 min-w-0"
    >
      <div
        class="p-3 rounded-xl bg-emerald-100/90 text-emerald-600 shadow-sm border border-white/30"
        data-testid="motion-div"
      >
        <div
          data-testid="server-icon"
        >
          Server
        </div>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="font-bold text-gray-900 text-sm group-hover:text-gray-700 transition-colors flex items-center gap-2 mb-1"
        >
          <span
            class="truncate"
          >
            Test Server
          </span>
          <span
            class="text-xs font-semibold text-gray-600 bg-white/80 px-2 py-1 rounded-lg backdrop-blur-sm shadow-sm border border-gray-200/50"
            data-testid="motion-span"
          >
            92
            /100
          </span>
        </h3>
        <p
          class="text-sm text-gray-600 font-medium mb-1"
        >
          nginx
           • 
          Seoul, KR
        </p>
        <p
          class="text-xs text-gray-500 flex items-center gap-1"
        >
          <div
            data-testid="globe-icon"
          >
            Globe
          </div>
          <span
            class="font-medium"
          >
            1 Gbps
          </span>
        </p>
      </div>
    </div>
    <div
      class="px-4 py-2 rounded-full bg-emerald-100/80 flex items-center gap-2 shadow-sm border border-white/30 backdrop-blur-sm"
      data-testid="motion-div"
    >
      <span
        class="text-sm"
      >
        ✅
      </span>
      <span
        class="text-xs font-bold text-emerald-800 tracking-wide"
      >
        정상
      </span>
    </div>
  </div>
  <div
    class="space-y-5"
  >
    <div
      class="grid grid-cols-2 gap-3 bg-white/60 rounded-2xl p-3 backdrop-blur-sm border border-white/40 shadow-inner"
    >
      <div
        class="flex flex-col bg-white/90 rounded-xl p-3 group hover:bg-white/95 transition-all duration-300 shadow-sm hover:shadow-md backdrop-blur-sm border border-white/20"
        data-testid="motion-div"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="text-gray-600 group-hover:scale-110 transition-transform p-1 rounded-lg bg-gray-50/80"
              data-testid="motion-div"
            >
              <div
                data-testid="cpu-icon"
              >
                CPU
              </div>
            </div>
            <span
              class="text-xs font-semibold text-gray-700 tracking-wide"
            >
              CPU
            </span>
          </div>
          <span
            class="text-sm font-bold px-2 py-1 rounded-lg bg-gray-100/80 text-gray-700"
            data-testid="motion-span"
          >
            55
            %
          </span>
        </div>
        <div
          class="w-18 h-10 relative bg-gradient-to-br from-white/60 to-gray-50/40 rounded-xl p-3 shadow-inner border border-gray-100/50"
        >
          <svg
            class="w-full h-full"
            preserveAspectRatio="none"
            viewBox="0 0 100 100"
          >
            <defs>
              <lineargradient
                id="gradient-server-001-CPU-0.8088240150303196"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#ef4444"
                  stop-opacity="0.9"
                />
                <stop
                  offset="40%"
                  stop-color="#ef4444"
                  stop-opacity="0.5"
                />
                <stop
                  offset="100%"
                  stop-color="#ef4444"
                  stop-opacity="0.1"
                />
              </lineargradient>
              <filter
                id="glow-server-001-CPU-0.9949881144727872"
              >
                <fegaussianblur
                  result="coloredBlur"
                  stdDeviation="1.5"
                />
                <femerge>
                  <femergenode
                    in="coloredBlur"
                  />
                  <femergenode
                    in="SourceGraphic"
                  />
                </femerge>
              </filter>
              <pattern
                height="8"
                id="grid-server-001-CPU"
                patternUnits="userSpaceOnUse"
                width="8"
              >
                <path
                  d="M 8 0 L 0 0 0 8"
                  fill="none"
                  opacity="0.4"
                  stroke="#e2e8f0"
                  stroke-width="0.2"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#grid-server-001-CPU)"
              height="100"
              opacity="0.3"
              width="100"
            />
            <polygon
              class="transition-all duration-500"
              fill="url(#gradient-server-001-CPU-0.8088240150303196)"
              points="0,100 0,50.79 9.090909090909092,60.87 18.181818181818183,64.49000000000001 27.27272727272727,54.06 36.36363636363637,54.45 45.45454545454545,48.24 54.54545454545454,54.49 63.63636363636363,68.5 72.72727272727273,48.18 81.81818181818183,69.21000000000001 90.9090909090909,62.13 100,44.8 100,100"
            />
            <polyline
              class="transition-all duration-500"
              fill="none"
              filter="url(#glow-server-001-CPU-0.9949881144727872)"
              points="0,50.79 9.090909090909092,60.87 18.181818181818183,64.49000000000001 27.27272727272727,54.06 36.36363636363637,54.45 45.45454545454545,48.24 54.54545454545454,54.49 63.63636363636363,68.5 72.72727272727273,48.18 81.81818181818183,69.21000000000001 90.9090909090909,62.13 100,44.8"
              stroke="#ef4444"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              vector-effect="non-scaling-stroke"
            />
            <circle
              class="drop-shadow-sm"
              cx="100"
              cy="44.8"
              fill="#ef4444"
              filter="url(#glow-server-001-CPU-0.9949881144727872)"
              r="3"
              stroke="white"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col bg-white/90 rounded-xl p-3 group hover:bg-white/95 transition-all duration-300 shadow-sm hover:shadow-md backdrop-blur-sm border border-white/20"
        data-testid="motion-div"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="text-gray-600 group-hover:scale-110 transition-transform p-1 rounded-lg bg-gray-50/80"
              data-testid="motion-div"
            >
              <div
                data-testid="activity-icon"
              >
                Activity
              </div>
            </div>
            <span
              class="text-xs font-semibold text-gray-700 tracking-wide"
            >
              메모리
            </span>
          </div>
          <span
            class="text-sm font-bold px-2 py-1 rounded-lg bg-gray-100/80 text-gray-700"
            data-testid="motion-span"
          >
            67
            %
          </span>
        </div>
        <div
          class="w-18 h-10 relative bg-gradient-to-br from-white/60 to-gray-50/40 rounded-xl p-3 shadow-inner border border-gray-100/50"
        >
          <svg
            class="w-full h-full"
            preserveAspectRatio="none"
            viewBox="0 0 100 100"
          >
            <defs>
              <lineargradient
                id="gradient-server-001-메모리-0.8240791425602976"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#3b82f6"
                  stop-opacity="0.9"
                />
                <stop
                  offset="40%"
                  stop-color="#3b82f6"
                  stop-opacity="0.5"
                />
                <stop
                  offset="100%"
                  stop-color="#3b82f6"
                  stop-opacity="0.1"
                />
              </lineargradient>
              <filter
                id="glow-server-001-메모리-0.650826041990145"
              >
                <fegaussianblur
                  result="coloredBlur"
                  stdDeviation="1.5"
                />
                <femerge>
                  <femergenode
                    in="coloredBlur"
                  />
                  <femergenode
                    in="SourceGraphic"
                  />
                </femerge>
              </filter>
              <pattern
                height="8"
                id="grid-server-001-메모리"
                patternUnits="userSpaceOnUse"
                width="8"
              >
                <path
                  d="M 8 0 L 0 0 0 8"
                  fill="none"
                  opacity="0.4"
                  stroke="#e2e8f0"
                  stroke-width="0.2"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#grid-server-001-메모리)"
              height="100"
              opacity="0.3"
              width="100"
            />
            <polygon
              class="transition-all duration-500"
              fill="url(#gradient-server-001-메모리-0.8240791425602976)"
              points="0,100 0,38.24 9.090909090909092,35.129999999999995 18.181818181818183,44.25 27.27272727272727,34.91 36.36363636363637,46.04 45.45454545454545,35.870000000000005 54.54545454545454,42.54 63.63636363636363,41.96 72.72727272727273,37.6 81.81818181818183,39.22 90.9090909090909,34.19 100,33.2 100,100"
            />
            <polyline
              class="transition-all duration-500"
              fill="none"
              filter="url(#glow-server-001-메모리-0.650826041990145)"
              points="0,38.24 9.090909090909092,35.129999999999995 18.181818181818183,44.25 27.27272727272727,34.91 36.36363636363637,46.04 45.45454545454545,35.870000000000005 54.54545454545454,42.54 63.63636363636363,41.96 72.72727272727273,37.6 81.81818181818183,39.22 90.9090909090909,34.19 100,33.2"
              stroke="#3b82f6"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              vector-effect="non-scaling-stroke"
            />
            <circle
              class="drop-shadow-sm"
              cx="100"
              cy="33.2"
              fill="#3b82f6"
              filter="url(#glow-server-001-메모리-0.650826041990145)"
              r="3"
              stroke="white"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col bg-white/90 rounded-xl p-3 group hover:bg-white/95 transition-all duration-300 shadow-sm hover:shadow-md backdrop-blur-sm border border-white/20"
        data-testid="motion-div"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="text-gray-600 group-hover:scale-110 transition-transform p-1 rounded-lg bg-gray-50/80"
              data-testid="motion-div"
            >
              <div
                data-testid="harddrive-icon"
              >
                HardDrive
              </div>
            </div>
            <span
              class="text-xs font-semibold text-gray-700 tracking-wide"
            >
              디스크
            </span>
          </div>
          <span
            class="text-sm font-bold px-2 py-1 rounded-lg bg-gray-100/80 text-gray-700"
            data-testid="motion-span"
          >
            41
            %
          </span>
        </div>
        <div
          class="w-18 h-10 relative bg-gradient-to-br from-white/60 to-gray-50/40 rounded-xl p-3 shadow-inner border border-gray-100/50"
        >
          <svg
            class="w-full h-full"
            preserveAspectRatio="none"
            viewBox="0 0 100 100"
          >
            <defs>
              <lineargradient
                id="gradient-server-001-디스크-0.1211104893217374"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#8b5cf6"
                  stop-opacity="0.9"
                />
                <stop
                  offset="40%"
                  stop-color="#8b5cf6"
                  stop-opacity="0.5"
                />
                <stop
                  offset="100%"
                  stop-color="#8b5cf6"
                  stop-opacity="0.1"
                />
              </lineargradient>
              <filter
                id="glow-server-001-디스크-0.8370296283871981"
              >
                <fegaussianblur
                  result="coloredBlur"
                  stdDeviation="1.5"
                />
                <femerge>
                  <femergenode
                    in="coloredBlur"
                  />
                  <femergenode
                    in="SourceGraphic"
                  />
                </femerge>
              </filter>
              <pattern
                height="8"
                id="grid-server-001-디스크"
                patternUnits="userSpaceOnUse"
                width="8"
              >
                <path
                  d="M 8 0 L 0 0 0 8"
                  fill="none"
                  opacity="0.4"
                  stroke="#e2e8f0"
                  stroke-width="0.2"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#grid-server-001-디스크)"
              height="100"
              opacity="0.3"
              width="100"
            />
            <polygon
              class="transition-all duration-500"
              fill="url(#gradient-server-001-디스크-0.1211104893217374)"
              points="0,100 0,64.45 9.090909090909092,62.55 18.181818181818183,57.95 27.27272727272727,65.34 36.36363636363637,60.42 45.45454545454545,66.78999999999999 54.54545454545454,57.64 63.63636363636363,61.8 72.72727272727273,59.14 81.81818181818183,58.79 90.9090909090909,60.87 100,58.81 100,100"
            />
            <polyline
              class="transition-all duration-500"
              fill="none"
              filter="url(#glow-server-001-디스크-0.8370296283871981)"
              points="0,64.45 9.090909090909092,62.55 18.181818181818183,57.95 27.27272727272727,65.34 36.36363636363637,60.42 45.45454545454545,66.78999999999999 54.54545454545454,57.64 63.63636363636363,61.8 72.72727272727273,59.14 81.81818181818183,58.79 90.9090909090909,60.87 100,58.81"
              stroke="#8b5cf6"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              vector-effect="non-scaling-stroke"
            />
            <circle
              class="drop-shadow-sm"
              cx="100"
              cy="58.81"
              fill="#8b5cf6"
              filter="url(#glow-server-001-디스크-0.8370296283871981)"
              r="3"
              stroke="white"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col bg-white/90 rounded-xl p-3 group hover:bg-white/95 transition-all duration-300 shadow-sm hover:shadow-md backdrop-blur-sm border border-white/20"
        data-testid="motion-div"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="text-gray-600 group-hover:scale-110 transition-transform p-1 rounded-lg bg-gray-50/80"
              data-testid="motion-div"
            >
              <div
                data-testid="network-icon"
              >
                Network
              </div>
            </div>
            <span
              class="text-xs font-semibold text-gray-700 tracking-wide"
            >
              네트워크
            </span>
          </div>
          <span
            class="text-sm font-bold px-2 py-1 rounded-lg bg-gray-100/80 text-gray-700"
            data-testid="motion-span"
          >
            23
            %
          </span>
        </div>
        <div
          class="w-18 h-10 relative bg-gradient-to-br from-white/60 to-gray-50/40 rounded-xl p-3 shadow-inner border border-gray-100/50"
        >
          <svg
            class="w-full h-full"
            preserveAspectRatio="none"
            viewBox="0 0 100 100"
          >
            <defs>
              <lineargradient
                id="gradient-server-001-네트워크-0.7409605332240434"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#10b981"
                  stop-opacity="0.9"
                />
                <stop
                  offset="40%"
                  stop-color="#10b981"
                  stop-opacity="0.5"
                />
                <stop
                  offset="100%"
                  stop-color="#10b981"
                  stop-opacity="0.1"
                />
              </lineargradient>
              <filter
                id="glow-server-001-네트워크-0.5019626521546898"
              >
                <fegaussianblur
                  result="coloredBlur"
                  stdDeviation="1.5"
                />
                <femerge>
                  <femergenode
                    in="coloredBlur"
                  />
                  <femergenode
                    in="SourceGraphic"
                  />
                </femerge>
              </filter>
              <pattern
                height="8"
                id="grid-server-001-네트워크"
                patternUnits="userSpaceOnUse"
                width="8"
              >
                <path
                  d="M 8 0 L 0 0 0 8"
                  fill="none"
                  opacity="0.4"
                  stroke="#e2e8f0"
                  stroke-width="0.2"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#grid-server-001-네트워크)"
              height="100"
              opacity="0.3"
              width="100"
            />
            <polygon
              class="transition-all duration-500"
              fill="url(#gradient-server-001-네트워크-0.7409605332240434)"
              points="0,100 0,59.57 9.090909090909092,62.03 18.181818181818183,74.4 27.27272727272727,76.83 36.36363636363637,84.07 45.45454545454545,77.08 54.54545454545454,83.8 63.63636363636363,59.09 72.72727272727273,90.59 81.81818181818183,70.37 90.9090909090909,89.2 100,77.43 100,100"
            />
            <polyline
              class="transition-all duration-500"
              fill="none"
              filter="url(#glow-server-001-네트워크-0.5019626521546898)"
              points="0,59.57 9.090909090909092,62.03 18.181818181818183,74.4 27.27272727272727,76.83 36.36363636363637,84.07 45.45454545454545,77.08 54.54545454545454,83.8 63.63636363636363,59.09 72.72727272727273,90.59 81.81818181818183,70.37 90.9090909090909,89.2 100,77.43"
              stroke="#10b981"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              vector-effect="non-scaling-stroke"
            />
            <circle
              class="drop-shadow-sm"
              cx="100"
              cy="77.43"
              fill="#10b981"
              filter="url(#glow-server-001-네트워크-0.5019626521546898)"
              r="3"
              stroke="white"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      data-testid="animate-presence"
    />
  </div>
  <div
    data-testid="animate-presence"
  />
</div>
`;

exports[`EnhancedServerCard v5.0 > 스냅샷 테스트 > warning 상태의 스냅샷이 일치한다 1`] = `
<div
  class="
        relative p-6 min-h-[240px] rounded-2xl cursor-pointer
        bg-gradient-to-br from-amber-50/80 via-yellow-50/60 to-orange-50/40
        border-2 border-amber-200/60 hover:border-amber-300/80
        shadow-lg shadow-amber-100/50 hover:shadow-2xl
        transition-all duration-300 ease-out
        backdrop-blur-lg
        group overflow-hidden
      "
  data-testid="motion-div"
>
  <div
    class="absolute inset-0 bg-gradient-to-br from-white/10 via-transparent to-black/5 pointer-events-none"
  />
  <div
    class="absolute top-4 right-4 flex items-center gap-2 z-10"
  >
    <div
      class="w-2.5 h-2.5 bg-amber-400 rounded-full shadow-lg"
      data-testid="motion-div"
    />
    <div
      class="flex items-center gap-1 bg-white/80 backdrop-blur-sm rounded-full px-2 py-1 shadow-sm"
      data-testid="motion-div"
    >
      <div
        data-testid="minus-icon"
      >
        Minus
      </div>
      <div
        data-testid="wifi-icon"
      >
        Wifi
      </div>
    </div>
  </div>
  <div
    class="flex items-start justify-between mb-5"
  >
    <div
      class="flex items-center gap-4 flex-1 min-w-0"
    >
      <div
        class="p-3 rounded-xl bg-amber-100/90 text-amber-600 shadow-sm border border-white/30"
        data-testid="motion-div"
      >
        <div
          data-testid="server-icon"
        >
          Server
        </div>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="font-bold text-gray-900 text-lg group-hover:text-gray-700 transition-colors flex items-center gap-2 mb-1"
        >
          <span
            class="truncate"
          >
            Test Server
          </span>
          <span
            class="text-xs font-semibold text-gray-600 bg-white/80 px-2 py-1 rounded-lg backdrop-blur-sm shadow-sm border border-gray-200/50"
            data-testid="motion-span"
          >
            92
            /100
          </span>
        </h3>
        <p
          class="text-sm text-gray-600 font-medium mb-1"
        >
          nginx
           • 
          Seoul, KR
        </p>
        <p
          class="text-xs text-gray-500 flex items-center gap-1"
        >
          <div
            data-testid="globe-icon"
          >
            Globe
          </div>
          <span
            class="font-medium"
          >
            1 Gbps
          </span>
        </p>
      </div>
    </div>
    <div
      class="px-4 py-2 rounded-full bg-amber-100/80 flex items-center gap-2 shadow-sm border border-white/30 backdrop-blur-sm"
      data-testid="motion-div"
    >
      <span
        class="text-sm"
      >
        ⚠️
      </span>
      <span
        class="text-xs font-bold text-amber-800 tracking-wide"
      >
        경고
      </span>
    </div>
  </div>
  <div
    class="space-y-5"
  >
    <div
      class="grid grid-cols-2 gap-3 bg-white/60 rounded-2xl p-5 backdrop-blur-sm border border-white/40 shadow-inner"
    >
      <div
        class="flex flex-col bg-white/90 rounded-xl p-3 group hover:bg-white/95 transition-all duration-300 shadow-sm hover:shadow-md backdrop-blur-sm border border-white/20"
        data-testid="motion-div"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="text-gray-600 group-hover:scale-110 transition-transform p-1 rounded-lg bg-gray-50/80"
              data-testid="motion-div"
            >
              <div
                data-testid="cpu-icon"
              >
                CPU
              </div>
            </div>
            <span
              class="text-xs font-semibold text-gray-700 tracking-wide"
            >
              CPU
            </span>
          </div>
          <span
            class="text-sm font-bold px-2 py-1 rounded-lg bg-gray-100/80 text-gray-700"
            data-testid="motion-span"
          >
            30
            %
          </span>
        </div>
        <div
          class="w-22 h-16 relative bg-gradient-to-br from-white/60 to-gray-50/40 rounded-xl p-3 shadow-inner border border-gray-100/50"
        >
          <svg
            class="w-full h-full"
            preserveAspectRatio="none"
            viewBox="0 0 100 100"
          >
            <defs>
              <lineargradient
                id="gradient-server-001-CPU-0.21754199974471344"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#ef4444"
                  stop-opacity="0.9"
                />
                <stop
                  offset="40%"
                  stop-color="#ef4444"
                  stop-opacity="0.5"
                />
                <stop
                  offset="100%"
                  stop-color="#ef4444"
                  stop-opacity="0.1"
                />
              </lineargradient>
              <filter
                id="glow-server-001-CPU-0.07892804107997353"
              >
                <fegaussianblur
                  result="coloredBlur"
                  stdDeviation="1.5"
                />
                <femerge>
                  <femergenode
                    in="coloredBlur"
                  />
                  <femergenode
                    in="SourceGraphic"
                  />
                </femerge>
              </filter>
              <pattern
                height="8"
                id="grid-server-001-CPU"
                patternUnits="userSpaceOnUse"
                width="8"
              >
                <path
                  d="M 8 0 L 0 0 0 8"
                  fill="none"
                  opacity="0.4"
                  stroke="#e2e8f0"
                  stroke-width="0.2"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#grid-server-001-CPU)"
              height="100"
              opacity="0.3"
              width="100"
            />
            <polygon
              class="transition-all duration-500"
              fill="url(#gradient-server-001-CPU-0.21754199974471344)"
              points="0,100 0,42.2 9.090909090909092,42.4 18.181818181818183,65.89 27.27272727272727,51.14 36.36363636363637,62.32 45.45454545454545,68.31 54.54545454545454,55.21 63.63636363636363,69.23 72.72727272727273,63.98 81.81818181818183,62.43 90.9090909090909,49.85 100,69.86 100,100"
            />
            <polyline
              class="transition-all duration-500"
              fill="none"
              filter="url(#glow-server-001-CPU-0.07892804107997353)"
              points="0,42.2 9.090909090909092,42.4 18.181818181818183,65.89 27.27272727272727,51.14 36.36363636363637,62.32 45.45454545454545,68.31 54.54545454545454,55.21 63.63636363636363,69.23 72.72727272727273,63.98 81.81818181818183,62.43 90.9090909090909,49.85 100,69.86"
              stroke="#ef4444"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              vector-effect="non-scaling-stroke"
            />
            <circle
              class="drop-shadow-sm"
              cx="100"
              cy="69.86"
              fill="#ef4444"
              filter="url(#glow-server-001-CPU-0.07892804107997353)"
              r="3"
              stroke="white"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col bg-white/90 rounded-xl p-3 group hover:bg-white/95 transition-all duration-300 shadow-sm hover:shadow-md backdrop-blur-sm border border-white/20"
        data-testid="motion-div"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="text-gray-600 group-hover:scale-110 transition-transform p-1 rounded-lg bg-gray-50/80"
              data-testid="motion-div"
            >
              <div
                data-testid="activity-icon"
              >
                Activity
              </div>
            </div>
            <span
              class="text-xs font-semibold text-gray-700 tracking-wide"
            >
              메모리
            </span>
          </div>
          <span
            class="text-sm font-bold px-2 py-1 rounded-lg bg-gray-100/80 text-gray-700"
            data-testid="motion-span"
          >
            55
            %
          </span>
        </div>
        <div
          class="w-22 h-16 relative bg-gradient-to-br from-white/60 to-gray-50/40 rounded-xl p-3 shadow-inner border border-gray-100/50"
        >
          <svg
            class="w-full h-full"
            preserveAspectRatio="none"
            viewBox="0 0 100 100"
          >
            <defs>
              <lineargradient
                id="gradient-server-001-메모리-0.5449113440611999"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#3b82f6"
                  stop-opacity="0.9"
                />
                <stop
                  offset="40%"
                  stop-color="#3b82f6"
                  stop-opacity="0.5"
                />
                <stop
                  offset="100%"
                  stop-color="#3b82f6"
                  stop-opacity="0.1"
                />
              </lineargradient>
              <filter
                id="glow-server-001-메모리-0.6869642960796545"
              >
                <fegaussianblur
                  result="coloredBlur"
                  stdDeviation="1.5"
                />
                <femerge>
                  <femergenode
                    in="coloredBlur"
                  />
                  <femergenode
                    in="SourceGraphic"
                  />
                </femerge>
              </filter>
              <pattern
                height="8"
                id="grid-server-001-메모리"
                patternUnits="userSpaceOnUse"
                width="8"
              >
                <path
                  d="M 8 0 L 0 0 0 8"
                  fill="none"
                  opacity="0.4"
                  stroke="#e2e8f0"
                  stroke-width="0.2"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#grid-server-001-메모리)"
              height="100"
              opacity="0.3"
              width="100"
            />
            <polygon
              class="transition-all duration-500"
              fill="url(#gradient-server-001-메모리-0.5449113440611999)"
              points="0,100 0,38.3 9.090909090909092,45.4 18.181818181818183,28.060000000000002 27.27272727272727,34.92 36.36363636363637,39.67 45.45454545454545,34.41 54.54545454545454,43.71 63.63636363636363,45.26 72.72727272727273,28.709999999999994 81.81818181818183,29.090000000000003 90.9090909090909,31.480000000000004 100,45.46 100,100"
            />
            <polyline
              class="transition-all duration-500"
              fill="none"
              filter="url(#glow-server-001-메모리-0.6869642960796545)"
              points="0,38.3 9.090909090909092,45.4 18.181818181818183,28.060000000000002 27.27272727272727,34.92 36.36363636363637,39.67 45.45454545454545,34.41 54.54545454545454,43.71 63.63636363636363,45.26 72.72727272727273,28.709999999999994 81.81818181818183,29.090000000000003 90.9090909090909,31.480000000000004 100,45.46"
              stroke="#3b82f6"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              vector-effect="non-scaling-stroke"
            />
            <circle
              class="drop-shadow-sm"
              cx="100"
              cy="45.46"
              fill="#3b82f6"
              filter="url(#glow-server-001-메모리-0.6869642960796545)"
              r="3"
              stroke="white"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col bg-white/90 rounded-xl p-3 group hover:bg-white/95 transition-all duration-300 shadow-sm hover:shadow-md backdrop-blur-sm border border-white/20"
        data-testid="motion-div"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="text-gray-600 group-hover:scale-110 transition-transform p-1 rounded-lg bg-gray-50/80"
              data-testid="motion-div"
            >
              <div
                data-testid="harddrive-icon"
              >
                HardDrive
              </div>
            </div>
            <span
              class="text-xs font-semibold text-gray-700 tracking-wide"
            >
              디스크
            </span>
          </div>
          <span
            class="text-sm font-bold px-2 py-1 rounded-lg bg-gray-100/80 text-gray-700"
            data-testid="motion-span"
          >
            41
            %
          </span>
        </div>
        <div
          class="w-22 h-16 relative bg-gradient-to-br from-white/60 to-gray-50/40 rounded-xl p-3 shadow-inner border border-gray-100/50"
        >
          <svg
            class="w-full h-full"
            preserveAspectRatio="none"
            viewBox="0 0 100 100"
          >
            <defs>
              <lineargradient
                id="gradient-server-001-디스크-0.02386237807582625"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#8b5cf6"
                  stop-opacity="0.9"
                />
                <stop
                  offset="40%"
                  stop-color="#8b5cf6"
                  stop-opacity="0.5"
                />
                <stop
                  offset="100%"
                  stop-color="#8b5cf6"
                  stop-opacity="0.1"
                />
              </lineargradient>
              <filter
                id="glow-server-001-디스크-0.22853130999726456"
              >
                <fegaussianblur
                  result="coloredBlur"
                  stdDeviation="1.5"
                />
                <femerge>
                  <femergenode
                    in="coloredBlur"
                  />
                  <femergenode
                    in="SourceGraphic"
                  />
                </femerge>
              </filter>
              <pattern
                height="8"
                id="grid-server-001-디스크"
                patternUnits="userSpaceOnUse"
                width="8"
              >
                <path
                  d="M 8 0 L 0 0 0 8"
                  fill="none"
                  opacity="0.4"
                  stroke="#e2e8f0"
                  stroke-width="0.2"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#grid-server-001-디스크)"
              height="100"
              opacity="0.3"
              width="100"
            />
            <polygon
              class="transition-all duration-500"
              fill="url(#gradient-server-001-디스크-0.02386237807582625)"
              points="0,100 0,60.95 9.090909090909092,57.64 18.181818181818183,58.42 27.27272727272727,59.41 36.36363636363637,61.57 45.45454545454545,58.71 54.54545454545454,64.88 63.63636363636363,59.16 72.72727272727273,61.26 81.81818181818183,58.12 90.9090909090909,64.63 100,59.11 100,100"
            />
            <polyline
              class="transition-all duration-500"
              fill="none"
              filter="url(#glow-server-001-디스크-0.22853130999726456)"
              points="0,60.95 9.090909090909092,57.64 18.181818181818183,58.42 27.27272727272727,59.41 36.36363636363637,61.57 45.45454545454545,58.71 54.54545454545454,64.88 63.63636363636363,59.16 72.72727272727273,61.26 81.81818181818183,58.12 90.9090909090909,64.63 100,59.11"
              stroke="#8b5cf6"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              vector-effect="non-scaling-stroke"
            />
            <circle
              class="drop-shadow-sm"
              cx="100"
              cy="59.11"
              fill="#8b5cf6"
              filter="url(#glow-server-001-디스크-0.22853130999726456)"
              r="3"
              stroke="white"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col bg-white/90 rounded-xl p-3 group hover:bg-white/95 transition-all duration-300 shadow-sm hover:shadow-md backdrop-blur-sm border border-white/20"
        data-testid="motion-div"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="text-gray-600 group-hover:scale-110 transition-transform p-1 rounded-lg bg-gray-50/80"
              data-testid="motion-div"
            >
              <div
                data-testid="network-icon"
              >
                Network
              </div>
            </div>
            <span
              class="text-xs font-semibold text-gray-700 tracking-wide"
            >
              네트워크
            </span>
          </div>
          <span
            class="text-sm font-bold px-2 py-1 rounded-lg bg-gray-100/80 text-gray-700"
            data-testid="motion-span"
          >
            16
            %
          </span>
        </div>
        <div
          class="w-22 h-16 relative bg-gradient-to-br from-white/60 to-gray-50/40 rounded-xl p-3 shadow-inner border border-gray-100/50"
        >
          <svg
            class="w-full h-full"
            preserveAspectRatio="none"
            viewBox="0 0 100 100"
          >
            <defs>
              <lineargradient
                id="gradient-server-001-네트워크-0.6826805557919187"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#10b981"
                  stop-opacity="0.9"
                />
                <stop
                  offset="40%"
                  stop-color="#10b981"
                  stop-opacity="0.5"
                />
                <stop
                  offset="100%"
                  stop-color="#10b981"
                  stop-opacity="0.1"
                />
              </lineargradient>
              <filter
                id="glow-server-001-네트워크-0.4649566278131927"
              >
                <fegaussianblur
                  result="coloredBlur"
                  stdDeviation="1.5"
                />
                <femerge>
                  <femergenode
                    in="coloredBlur"
                  />
                  <femergenode
                    in="SourceGraphic"
                  />
                </femerge>
              </filter>
              <pattern
                height="8"
                id="grid-server-001-네트워크"
                patternUnits="userSpaceOnUse"
                width="8"
              >
                <path
                  d="M 8 0 L 0 0 0 8"
                  fill="none"
                  opacity="0.4"
                  stroke="#e2e8f0"
                  stroke-width="0.2"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#grid-server-001-네트워크)"
              height="100"
              opacity="0.3"
              width="100"
            />
            <polygon
              class="transition-all duration-500"
              fill="url(#gradient-server-001-네트워크-0.6826805557919187)"
              points="0,100 0,71.17 9.090909090909092,83 18.181818181818183,76.85 27.27272727272727,56.86 36.36363636363637,93.1 45.45454545454545,85.24 54.54545454545454,56.27 63.63636363636363,62.45 72.72727272727273,62.06 81.81818181818183,58.06 90.9090909090909,55.22 100,84.05 100,100"
            />
            <polyline
              class="transition-all duration-500"
              fill="none"
              filter="url(#glow-server-001-네트워크-0.4649566278131927)"
              points="0,71.17 9.090909090909092,83 18.181818181818183,76.85 27.27272727272727,56.86 36.36363636363637,93.1 45.45454545454545,85.24 54.54545454545454,56.27 63.63636363636363,62.45 72.72727272727273,62.06 81.81818181818183,58.06 90.9090909090909,55.22 100,84.05"
              stroke="#10b981"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              vector-effect="non-scaling-stroke"
            />
            <circle
              class="drop-shadow-sm"
              cx="100"
              cy="84.05"
              fill="#10b981"
              filter="url(#glow-server-001-네트워크-0.4649566278131927)"
              r="3"
              stroke="white"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="flex gap-2 flex-wrap"
    >
      <div
        class="px-3 py-1.5 rounded-xl text-xs flex items-center gap-2 font-medium shadow-sm border transition-all duration-200 bg-emerald-100/80 text-emerald-700 border-emerald-200/50"
        data-testid="motion-div"
      >
        <div
          class="w-2 h-2 rounded-full bg-emerald-500"
          data-testid="motion-div"
        />
        nginx
      </div>
      <div
        class="px-3 py-1.5 rounded-xl text-xs flex items-center gap-2 font-medium shadow-sm border transition-all duration-200 bg-emerald-100/80 text-emerald-700 border-emerald-200/50"
        data-testid="motion-div"
      >
        <div
          class="w-2 h-2 rounded-full bg-emerald-500"
          data-testid="motion-div"
        />
        ssl
      </div>
      <div
        class="px-3 py-1.5 rounded-xl text-xs flex items-center gap-2 font-medium shadow-sm border transition-all duration-200 bg-emerald-100/80 text-emerald-700 border-emerald-200/50"
        data-testid="motion-div"
      >
        <div
          class="w-2 h-2 rounded-full bg-emerald-500"
          data-testid="motion-div"
        />
        monitoring
      </div>
    </div>
    <div
      class="flex items-center justify-between p-3 bg-white/70 rounded-xl backdrop-blur-sm border border-white/40 shadow-sm"
      data-testid="motion-div"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          class="p-1.5 rounded-lg bg-gray-100/80"
          data-testid="motion-div"
        >
          <div
            data-testid="wifi-icon"
          >
            Wifi
          </div>
        </div>
        <span
          class="text-sm font-semibold text-gray-700"
        >
          네트워크 상태
        </span>
      </div>
      <span
        class="text-xs font-bold px-3 py-1.5 rounded-xl shadow-sm border bg-emerald-100/80 text-emerald-700 border-emerald-200/50"
      >
        정상
      </span>
    </div>
    <div
      data-testid="animate-presence"
    />
  </div>
  <div
    data-testid="animate-presence"
  />
</div>
`;

exports[`EnhancedServerCard v5.0 > 스냅샷 테스트 > 기본 상태의 스냅샷이 일치한다 1`] = `
<div
  class="
        relative p-6 min-h-[240px] rounded-2xl cursor-pointer
        bg-gradient-to-br from-emerald-50/80 via-green-50/60 to-teal-50/40
        border-2 border-emerald-200/60 hover:border-emerald-300/80
        shadow-lg shadow-emerald-100/50 hover:shadow-2xl
        transition-all duration-300 ease-out
        backdrop-blur-lg
        group overflow-hidden
      "
  data-testid="motion-div"
>
  <div
    class="absolute inset-0 bg-gradient-to-br from-white/10 via-transparent to-black/5 pointer-events-none"
  />
  <div
    class="absolute top-4 right-4 flex items-center gap-2 z-10"
  >
    <div
      class="w-2.5 h-2.5 bg-emerald-400 rounded-full shadow-lg"
      data-testid="motion-div"
    />
    <div
      class="flex items-center gap-1 bg-white/80 backdrop-blur-sm rounded-full px-2 py-1 shadow-sm"
      data-testid="motion-div"
    >
      <div
        data-testid="minus-icon"
      >
        Minus
      </div>
      <div
        data-testid="wifi-icon"
      >
        Wifi
      </div>
    </div>
  </div>
  <div
    class="flex items-start justify-between mb-5"
  >
    <div
      class="flex items-center gap-4 flex-1 min-w-0"
    >
      <div
        class="p-3 rounded-xl bg-emerald-100/90 text-emerald-600 shadow-sm border border-white/30"
        data-testid="motion-div"
      >
        <div
          data-testid="server-icon"
        >
          Server
        </div>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="font-bold text-gray-900 text-lg group-hover:text-gray-700 transition-colors flex items-center gap-2 mb-1"
        >
          <span
            class="truncate"
          >
            Test Server
          </span>
          <span
            class="text-xs font-semibold text-gray-600 bg-white/80 px-2 py-1 rounded-lg backdrop-blur-sm shadow-sm border border-gray-200/50"
            data-testid="motion-span"
          >
            92
            /100
          </span>
        </h3>
        <p
          class="text-sm text-gray-600 font-medium mb-1"
        >
          nginx
           • 
          Seoul, KR
        </p>
        <p
          class="text-xs text-gray-500 flex items-center gap-1"
        >
          <div
            data-testid="globe-icon"
          >
            Globe
          </div>
          <span
            class="font-medium"
          >
            1 Gbps
          </span>
        </p>
      </div>
    </div>
    <div
      class="px-4 py-2 rounded-full bg-emerald-100/80 flex items-center gap-2 shadow-sm border border-white/30 backdrop-blur-sm"
      data-testid="motion-div"
    >
      <span
        class="text-sm"
      >
        ✅
      </span>
      <span
        class="text-xs font-bold text-emerald-800 tracking-wide"
      >
        정상
      </span>
    </div>
  </div>
  <div
    class="space-y-5"
  >
    <div
      class="grid grid-cols-2 gap-3 bg-white/60 rounded-2xl p-5 backdrop-blur-sm border border-white/40 shadow-inner"
    >
      <div
        class="flex flex-col bg-white/90 rounded-xl p-3 group hover:bg-white/95 transition-all duration-300 shadow-sm hover:shadow-md backdrop-blur-sm border border-white/20"
        data-testid="motion-div"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="text-gray-600 group-hover:scale-110 transition-transform p-1 rounded-lg bg-gray-50/80"
              data-testid="motion-div"
            >
              <div
                data-testid="cpu-icon"
              >
                CPU
              </div>
            </div>
            <span
              class="text-xs font-semibold text-gray-700 tracking-wide"
            >
              CPU
            </span>
          </div>
          <span
            class="text-sm font-bold px-2 py-1 rounded-lg bg-gray-100/80 text-gray-700"
            data-testid="motion-span"
          >
            31
            %
          </span>
        </div>
        <div
          class="w-22 h-16 relative bg-gradient-to-br from-white/60 to-gray-50/40 rounded-xl p-3 shadow-inner border border-gray-100/50"
        >
          <svg
            class="w-full h-full"
            preserveAspectRatio="none"
            viewBox="0 0 100 100"
          >
            <defs>
              <lineargradient
                id="gradient-server-001-CPU-0.7868461250533512"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#ef4444"
                  stop-opacity="0.9"
                />
                <stop
                  offset="40%"
                  stop-color="#ef4444"
                  stop-opacity="0.5"
                />
                <stop
                  offset="100%"
                  stop-color="#ef4444"
                  stop-opacity="0.1"
                />
              </lineargradient>
              <filter
                id="glow-server-001-CPU-0.9423077473585442"
              >
                <fegaussianblur
                  result="coloredBlur"
                  stdDeviation="1.5"
                />
                <femerge>
                  <femergenode
                    in="coloredBlur"
                  />
                  <femergenode
                    in="SourceGraphic"
                  />
                </femerge>
              </filter>
              <pattern
                height="8"
                id="grid-server-001-CPU"
                patternUnits="userSpaceOnUse"
                width="8"
              >
                <path
                  d="M 8 0 L 0 0 0 8"
                  fill="none"
                  opacity="0.4"
                  stroke="#e2e8f0"
                  stroke-width="0.2"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#grid-server-001-CPU)"
              height="100"
              opacity="0.3"
              width="100"
            />
            <polygon
              class="transition-all duration-500"
              fill="url(#gradient-server-001-CPU-0.7868461250533512)"
              points="0,100 0,66.00999999999999 9.090909090909092,62.95 18.181818181818183,53.35 27.27272727272727,59.95 36.36363636363637,53.36 45.45454545454545,67.17 54.54545454545454,59.99 63.63636363636363,62.27 72.72727272727273,52.28 81.81818181818183,62.52 90.9090909090909,42.14 100,68.95 100,100"
            />
            <polyline
              class="transition-all duration-500"
              fill="none"
              filter="url(#glow-server-001-CPU-0.9423077473585442)"
              points="0,66.00999999999999 9.090909090909092,62.95 18.181818181818183,53.35 27.27272727272727,59.95 36.36363636363637,53.36 45.45454545454545,67.17 54.54545454545454,59.99 63.63636363636363,62.27 72.72727272727273,52.28 81.81818181818183,62.52 90.9090909090909,42.14 100,68.95"
              stroke="#ef4444"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              vector-effect="non-scaling-stroke"
            />
            <circle
              class="drop-shadow-sm"
              cx="100"
              cy="68.95"
              fill="#ef4444"
              filter="url(#glow-server-001-CPU-0.9423077473585442)"
              r="3"
              stroke="white"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col bg-white/90 rounded-xl p-3 group hover:bg-white/95 transition-all duration-300 shadow-sm hover:shadow-md backdrop-blur-sm border border-white/20"
        data-testid="motion-div"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="text-gray-600 group-hover:scale-110 transition-transform p-1 rounded-lg bg-gray-50/80"
              data-testid="motion-div"
            >
              <div
                data-testid="activity-icon"
              >
                Activity
              </div>
            </div>
            <span
              class="text-xs font-semibold text-gray-700 tracking-wide"
            >
              메모리
            </span>
          </div>
          <span
            class="text-sm font-bold px-2 py-1 rounded-lg bg-yellow-100/80 text-yellow-700"
            data-testid="motion-span"
          >
            71
            %
          </span>
        </div>
        <div
          class="w-22 h-16 relative bg-gradient-to-br from-white/60 to-gray-50/40 rounded-xl p-3 shadow-inner border border-gray-100/50"
        >
          <svg
            class="w-full h-full"
            preserveAspectRatio="none"
            viewBox="0 0 100 100"
          >
            <defs>
              <lineargradient
                id="gradient-server-001-메모리-0.3755786830740486"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#eab308"
                  stop-opacity="0.9"
                />
                <stop
                  offset="40%"
                  stop-color="#eab308"
                  stop-opacity="0.5"
                />
                <stop
                  offset="100%"
                  stop-color="#eab308"
                  stop-opacity="0.1"
                />
              </lineargradient>
              <filter
                id="glow-server-001-메모리-0.8363061281972377"
              >
                <fegaussianblur
                  result="coloredBlur"
                  stdDeviation="1.5"
                />
                <femerge>
                  <femergenode
                    in="coloredBlur"
                  />
                  <femergenode
                    in="SourceGraphic"
                  />
                </femerge>
              </filter>
              <pattern
                height="8"
                id="grid-server-001-메모리"
                patternUnits="userSpaceOnUse"
                width="8"
              >
                <path
                  d="M 8 0 L 0 0 0 8"
                  fill="none"
                  opacity="0.4"
                  stroke="#e2e8f0"
                  stroke-width="0.2"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#grid-server-001-메모리)"
              height="100"
              opacity="0.3"
              width="100"
            />
            <polygon
              class="transition-all duration-500"
              fill="url(#gradient-server-001-메모리-0.3755786830740486)"
              points="0,100 0,32.620000000000005 9.090909090909092,37.81 18.181818181818183,45.25 27.27272727272727,42.19 36.36363636363637,46.8 45.45454545454545,34.84 54.54545454545454,37.81 63.63636363636363,39.53 72.72727272727273,36.64 81.81818181818183,44.35 90.9090909090909,40.36 100,28.659999999999997 100,100"
            />
            <polyline
              class="transition-all duration-500"
              fill="none"
              filter="url(#glow-server-001-메모리-0.8363061281972377)"
              points="0,32.620000000000005 9.090909090909092,37.81 18.181818181818183,45.25 27.27272727272727,42.19 36.36363636363637,46.8 45.45454545454545,34.84 54.54545454545454,37.81 63.63636363636363,39.53 72.72727272727273,36.64 81.81818181818183,44.35 90.9090909090909,40.36 100,28.659999999999997"
              stroke="#eab308"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              vector-effect="non-scaling-stroke"
            />
            <circle
              class="drop-shadow-sm"
              cx="100"
              cy="28.659999999999997"
              fill="#eab308"
              filter="url(#glow-server-001-메모리-0.8363061281972377)"
              r="3"
              stroke="white"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col bg-white/90 rounded-xl p-3 group hover:bg-white/95 transition-all duration-300 shadow-sm hover:shadow-md backdrop-blur-sm border border-white/20"
        data-testid="motion-div"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="text-gray-600 group-hover:scale-110 transition-transform p-1 rounded-lg bg-gray-50/80"
              data-testid="motion-div"
            >
              <div
                data-testid="harddrive-icon"
              >
                HardDrive
              </div>
            </div>
            <span
              class="text-xs font-semibold text-gray-700 tracking-wide"
            >
              디스크
            </span>
          </div>
          <span
            class="text-sm font-bold px-2 py-1 rounded-lg bg-gray-100/80 text-gray-700"
            data-testid="motion-span"
          >
            42
            %
          </span>
        </div>
        <div
          class="w-22 h-16 relative bg-gradient-to-br from-white/60 to-gray-50/40 rounded-xl p-3 shadow-inner border border-gray-100/50"
        >
          <svg
            class="w-full h-full"
            preserveAspectRatio="none"
            viewBox="0 0 100 100"
          >
            <defs>
              <lineargradient
                id="gradient-server-001-디스크-0.7045953284791939"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#8b5cf6"
                  stop-opacity="0.9"
                />
                <stop
                  offset="40%"
                  stop-color="#8b5cf6"
                  stop-opacity="0.5"
                />
                <stop
                  offset="100%"
                  stop-color="#8b5cf6"
                  stop-opacity="0.1"
                />
              </lineargradient>
              <filter
                id="glow-server-001-디스크-0.5507805266092181"
              >
                <fegaussianblur
                  result="coloredBlur"
                  stdDeviation="1.5"
                />
                <femerge>
                  <femergenode
                    in="coloredBlur"
                  />
                  <femergenode
                    in="SourceGraphic"
                  />
                </femerge>
              </filter>
              <pattern
                height="8"
                id="grid-server-001-디스크"
                patternUnits="userSpaceOnUse"
                width="8"
              >
                <path
                  d="M 8 0 L 0 0 0 8"
                  fill="none"
                  opacity="0.4"
                  stroke="#e2e8f0"
                  stroke-width="0.2"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#grid-server-001-디스크)"
              height="100"
              opacity="0.3"
              width="100"
            />
            <polygon
              class="transition-all duration-500"
              fill="url(#gradient-server-001-디스크-0.7045953284791939)"
              points="0,100 0,61.73 9.090909090909092,57.59 18.181818181818183,59.02 27.27272727272727,59.44 36.36363636363637,63.08 45.45454545454545,65.11 54.54545454545454,63.89 63.63636363636363,66.6 72.72727272727273,65.49000000000001 81.81818181818183,60.22 90.9090909090909,57.09 100,58.39 100,100"
            />
            <polyline
              class="transition-all duration-500"
              fill="none"
              filter="url(#glow-server-001-디스크-0.5507805266092181)"
              points="0,61.73 9.090909090909092,57.59 18.181818181818183,59.02 27.27272727272727,59.44 36.36363636363637,63.08 45.45454545454545,65.11 54.54545454545454,63.89 63.63636363636363,66.6 72.72727272727273,65.49000000000001 81.81818181818183,60.22 90.9090909090909,57.09 100,58.39"
              stroke="#8b5cf6"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              vector-effect="non-scaling-stroke"
            />
            <circle
              class="drop-shadow-sm"
              cx="100"
              cy="58.39"
              fill="#8b5cf6"
              filter="url(#glow-server-001-디스크-0.5507805266092181)"
              r="3"
              stroke="white"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col bg-white/90 rounded-xl p-3 group hover:bg-white/95 transition-all duration-300 shadow-sm hover:shadow-md backdrop-blur-sm border border-white/20"
        data-testid="motion-div"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="text-gray-600 group-hover:scale-110 transition-transform p-1 rounded-lg bg-gray-50/80"
              data-testid="motion-div"
            >
              <div
                data-testid="network-icon"
              >
                Network
              </div>
            </div>
            <span
              class="text-xs font-semibold text-gray-700 tracking-wide"
            >
              네트워크
            </span>
          </div>
          <span
            class="text-sm font-bold px-2 py-1 rounded-lg bg-gray-100/80 text-gray-700"
            data-testid="motion-span"
          >
            24
            %
          </span>
        </div>
        <div
          class="w-22 h-16 relative bg-gradient-to-br from-white/60 to-gray-50/40 rounded-xl p-3 shadow-inner border border-gray-100/50"
        >
          <svg
            class="w-full h-full"
            preserveAspectRatio="none"
            viewBox="0 0 100 100"
          >
            <defs>
              <lineargradient
                id="gradient-server-001-네트워크-0.8689244868844985"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#10b981"
                  stop-opacity="0.9"
                />
                <stop
                  offset="40%"
                  stop-color="#10b981"
                  stop-opacity="0.5"
                />
                <stop
                  offset="100%"
                  stop-color="#10b981"
                  stop-opacity="0.1"
                />
              </lineargradient>
              <filter
                id="glow-server-001-네트워크-0.6581724858623557"
              >
                <fegaussianblur
                  result="coloredBlur"
                  stdDeviation="1.5"
                />
                <femerge>
                  <femergenode
                    in="coloredBlur"
                  />
                  <femergenode
                    in="SourceGraphic"
                  />
                </femerge>
              </filter>
              <pattern
                height="8"
                id="grid-server-001-네트워크"
                patternUnits="userSpaceOnUse"
                width="8"
              >
                <path
                  d="M 8 0 L 0 0 0 8"
                  fill="none"
                  opacity="0.4"
                  stroke="#e2e8f0"
                  stroke-width="0.2"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#grid-server-001-네트워크)"
              height="100"
              opacity="0.3"
              width="100"
            />
            <polygon
              class="transition-all duration-500"
              fill="url(#gradient-server-001-네트워크-0.8689244868844985)"
              points="0,100 0,87.39 9.090909090909092,78.56 18.181818181818183,55.5 27.27272727272727,80.19 36.36363636363637,80.99 45.45454545454545,93.93 54.54545454545454,87.57 63.63636363636363,79.51 72.72727272727273,88.01 81.81818181818183,81.01 90.9090909090909,92.98 100,76.48 100,100"
            />
            <polyline
              class="transition-all duration-500"
              fill="none"
              filter="url(#glow-server-001-네트워크-0.6581724858623557)"
              points="0,87.39 9.090909090909092,78.56 18.181818181818183,55.5 27.27272727272727,80.19 36.36363636363637,80.99 45.45454545454545,93.93 54.54545454545454,87.57 63.63636363636363,79.51 72.72727272727273,88.01 81.81818181818183,81.01 90.9090909090909,92.98 100,76.48"
              stroke="#10b981"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              vector-effect="non-scaling-stroke"
            />
            <circle
              class="drop-shadow-sm"
              cx="100"
              cy="76.48"
              fill="#10b981"
              filter="url(#glow-server-001-네트워크-0.6581724858623557)"
              r="3"
              stroke="white"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="flex gap-2 flex-wrap"
    >
      <div
        class="px-3 py-1.5 rounded-xl text-xs flex items-center gap-2 font-medium shadow-sm border transition-all duration-200 bg-emerald-100/80 text-emerald-700 border-emerald-200/50"
        data-testid="motion-div"
      >
        <div
          class="w-2 h-2 rounded-full bg-emerald-500"
          data-testid="motion-div"
        />
        nginx
      </div>
      <div
        class="px-3 py-1.5 rounded-xl text-xs flex items-center gap-2 font-medium shadow-sm border transition-all duration-200 bg-emerald-100/80 text-emerald-700 border-emerald-200/50"
        data-testid="motion-div"
      >
        <div
          class="w-2 h-2 rounded-full bg-emerald-500"
          data-testid="motion-div"
        />
        ssl
      </div>
      <div
        class="px-3 py-1.5 rounded-xl text-xs flex items-center gap-2 font-medium shadow-sm border transition-all duration-200 bg-emerald-100/80 text-emerald-700 border-emerald-200/50"
        data-testid="motion-div"
      >
        <div
          class="w-2 h-2 rounded-full bg-emerald-500"
          data-testid="motion-div"
        />
        monitoring
      </div>
    </div>
    <div
      class="flex items-center justify-between p-3 bg-white/70 rounded-xl backdrop-blur-sm border border-white/40 shadow-sm"
      data-testid="motion-div"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          class="p-1.5 rounded-lg bg-gray-100/80"
          data-testid="motion-div"
        >
          <div
            data-testid="wifi-icon"
          >
            Wifi
          </div>
        </div>
        <span
          class="text-sm font-semibold text-gray-700"
        >
          네트워크 상태
        </span>
      </div>
      <span
        class="text-xs font-bold px-3 py-1.5 rounded-xl shadow-sm border bg-emerald-100/80 text-emerald-700 border-emerald-200/50"
      >
        정상
      </span>
    </div>
    <div
      data-testid="animate-presence"
    />
  </div>
  <div
    data-testid="animate-presence"
  />
</div>
`;
